apps/template/apps/kubernetes-dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - dashboard.{subdomain}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/login
    - path:
        type: PathPrefix
        value: /api/v1/csrftoken/login
    - path:
        type: PathPrefix
        value: /api/v1/me
    backendRefs:
    - group: ''
      kind: Service
      name: kubernetes-dashboard-auth
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /api
    - path:
        type: PathPrefix
        value: /metrics
    backendRefs:
    - group: ''
      kind: Service
      name: kubernetes-dashboard-api
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: kubernetes-dashboard-web
      port: 8000
      weight: 1
